src/objects/bupl__BusinessPlan__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_indvi_lock_edit_ind_type__c</fullName>
        <formula>acpl__gf_account_planning_id__r.acpl__gf_ap_indvi_lock_edit_ind_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP unlocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bupl__gf_ap_public_ind_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_lock_lim_tot_amount__c</fullName>
        <label>Risk limit increase</label>
        <summarizedField>bupl__BP_Need__c.bupl__gf_bus_pl_unlk_risk_lim_amount__c</summarizedField>
        <summaryForeignKey>bupl__BP_Need__c.bupl__gf_business_plan_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_lock_rev_tot_amount__c</fullName>
        <label>Potential additional revenues</label>
        <summarizedField>bupl__BP_Need__c.bupl__gf_bus_pl_unlk_revenue_amount__c</summarizedField>
        <summaryForeignKey>bupl__BP_Need__c.bupl__gf_business_plan_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_growth_rec_number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Growth Drivers Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_lock_record_number__c</fullName>
        <label>Total Needs Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bupl__gf_counter_number__c</fullName>
        <label>Total number of Business Plan Versions</label>
        <summaryForeignKey>bupl__BusinessPlan_Version__c.bupl__gf_business_plan_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bupl__participant_id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>BusinessPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__status_type__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Plan</label>
    <listViews>
        <fullName>bupl__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>